cmake_minimum_required(VERSION 3.5)

project(LtApplication VERSION 0.0.1 LANGUAGES C CXX)

# for generate omplete database
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_CONFIG_DIR ${LtApplication_SOURCE_DIR}/cmake)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CONFIG_DIR}/Modules)
MESSAGE(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/dist/bin)

include(cmake/include.cmake)

ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(thirdparty/ltio)

MESSAGE(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

MESSAGE(STATUS "SOURCE dir " ${LtApplication_SOURCE_DIR})
MESSAGE(STATUS "BINARY dir " ${LtApplication_BINARY_DIR})
MESSAGE(STATUS "CMAKE lib output dir " ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
MESSAGE(STATUS "CMAKE binary output dir " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
